BusOne/src/objects/Territory_Settings_vod__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings related to territory management</description>
    <fields>
        <fullName>ATL_Mode_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 or null = classic ATL mode that fully masters manual territory assignments for an Account. Each ATL record insert or update will initially delete all Territories with AccountShare.RowCause=TerritoryManual for the Account, and subsequently insert only the Territories listed in the ATL.Territory_vod__c field. 
1 = ATL mode that has an &quot;additive&quot; approach only. Each ATL record insert or update will not initially delete any Territories from AccountShare. This mode only looks for new Territories added to Territory_vod__c and attempts to only insert the new territory (not touching any other Territories in AccountShare)</description>
        <label>ATL Mode</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Align_Integration_User_vod__c</fullName>
        <description>The Align Integration User that is integrated to this Veeva CRM Org.</description>
        <label>Align Integration User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Align_Server_vod__c</fullName>
        <description>The Align Server URL that is integrated to this Veeva CRM Org.</description>
        <label>Align Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Align_Territory_Feedback_Mode_vod__c</fullName>
        <description>Null or 0 = Feedback point of entry is disabled/hidden
1 = Feedback Lite is enabled</description>
        <label>Align Territory Feedback Mode</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Align_Vault_Id_vod__c</fullName>
        <description>The Align Vault Id that is integrated to this Veeva CRM Org.</description>
        <label>Align Vault Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Align_Vault_Integration_Id_vod__c</fullName>
        <description>The Align Vault GUID that is integrated to this Veeva CRM Org.</description>
        <label>Align Vault Integration Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Align_Version_vod__c</fullName>
        <description>The Align Version that is integrated to this Veeva CRM Org.</description>
        <label>Align Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID used for Metadata migration</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Territory Settings</label>
</CustomObject>